@@ -11,6 +11,7 @@ of methods that can be used to get and set data from / to Siril.
 
 import os
 import sys
+import re
 import atexit
 import socket
 import struct
@@ -77,6 +78,7 @@ class SirilInterface:
             self.command_lock = threading.Lock()
 
         self.debug = bool(os.getenv('SIRIL_PYTHON_DEBUG') is not None)
+        self._is_cli = bool(os.getenv('SIRIL_PYTHON_CLI') is not None)
 
     def connect(self) -> bool:
         """
@@ -948,8 +950,6 @@ class SirilInterface:
 
         except Exception as e:
             raise SirilError(f"Error in warning_messagebox(): {e}") from e
-
-
 
     def undo_save_state(self, my_string: str) -> bool:
         """
@@ -2850,7 +2850,6 @@ class SirilInterface:
         except struct.error as e:
             raise SirilError(f"Error in get_seq_distodata(): {e}") from e
 
-
     def get_seq(self) -> Optional[Sequence]:
         """
         Request metadata for the current sequence loaded in Siril.
@@ -4065,3 +4064,59 @@ class SirilInterface:
 
                 except Exception:
                     pass
+
+    def create_new_seq(self, seq_root: str) -> bool:
+        """
+        Creates a new .seq file with all images named seq_rootXXXXX.ext located in
+        the current home folder. If a sequence with the same name is already loaded
+        in Siril, it will not be recreated. This only works for FITS files, not FITSEQ nor SER.
+        The newly created sequence is not loaded in Siril.
+
+        Args:
+            seq_root: The root name of the sequence to be created.
+
+        Returns:
+            bool: True if the sequence was successfully created, False otherwise.
+
+        Raises:
+            SirilError: if an error occurred.
+
+        """
+
+        try:
+            if self.is_sequence_loaded():
+                seq = self.get_seq()
+                seq1_stripped = seq.seqname.rstrip('_')
+                seq2_stripped = seq_root.rstrip('_')
+                if seq1_stripped == seq2_stripped:
+                    self.log(_('A sequence with the same name is already loaded in Siril, aborting'), LogColor.RED)
+                    return False
+            home_folder = self.get_siril_wd()
+            all_files = os.listdir(home_folder)
+            ext = self.get_siril_config('core','extension')
+            pattern = fr'^{seq_root}\d{{5}}{ext}$'
+            regex = re.compile(pattern)
+            exact_matches = [os.path.join(home_folder, f) for f in all_files if regex.match(f)]
+            if len(exact_matches) == 0:
+                self.log(_(f'No files matching {seq_root} pattern found in the Home folder'), LogColor.RED)
+                return False
+            if len(exact_matches) == 1:
+                self.log(_(f'Only one file matching {seq_root} found in the Home folder, cannot create sequence'), LogColor.RED)
+            message_bytes = seq_root.encode('utf-8')
+            return self._execute_command(_Command.CREATE_NEW_SEQ, message_bytes)
+
+        except Exception as e:
+            raise SirilError(f"Error in create_new_seq(): {e}") from e
+
+
+    def is_cli(self) -> bool:
+        """
+        Check if the current instance is running in CLI mode. This method is useful
+        to detect how the script was invoked and whether to show or not a GUI.
+        This is False when the script is called by clicking in the Script menu, 
+        True otherwise.
+
+        Returns:
+            bool: True if running in CLI mode, False otherwise.
+        """
+        return self._is_cli
