@@ -121,6 +121,7 @@ class _Command(IntEnum):
     GET_USER_POLYGON_LIST = 61
     CONFIRM_MESSAGEBOX = 62
     GET_SEQ_FRAME_HEADER = 63
+    CREATE_NEW_SEQ = 64
     ERROR = 0xFF
 
 @unique
