@@ -78,6 +78,7 @@ typedef enum {
 	CMD_GET_USER_POLYGON_LIST = 61,
 	CMD_CONFIRM_MESSAGEBOX = 62,
 	CMD_GET_SEQ_FRAME_HEADER = 63,
+	CMD_CREATE_NEW_SEQ = 64,
 	CMD_ERROR = 0xFF
 } CommandType;
 
