@@ -19,10 +19,11 @@ XX/XX/25
 
 **Improvements:**
 * Scripts can be opened in the editor directly from the Script Preferences treeview (#1556, !860)
-* Add a fork of tkfilebrowser to support improved script UI file selection on Linux (!864)
+* Added a fork of tkfilebrowser to support improved script UI file selection on Linux (!864)
 * Implemented a better linear regression algorithm for SPCC (!853)
 * Python scripts are now sorted alphabetically (#1559)
-* Add an optional rate limit for smooth scroll zoom speed (#1576)
+* Added an optional rate limit for smooth scroll zoom speed (#1576)
+* Added SirilInterface.create_new_seq() and SirilInterface.is_cli() in sirilpy (!867)
 
 
 siril 1.4.0-beta1
